[gd_scene load_steps=9 format=2]

[ext_resource path="res://FlatMap.gd" type="Script" id=1]
[ext_resource path="res://map_assets/back0.jpg" type="Texture" id=2]
[ext_resource path="res://Goal.gd" type="Script" id=3]
[ext_resource path="res://goal1.png" type="Texture" id=4]
[ext_resource path="res://fonts/KOMIKAX_.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://map_assets/tiles3.tres" type="TileSet" id=6]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 34.5644, 32.2657 )

[sub_resource type="DynamicFont" id=2]

size = 60
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="FlatMap" type="Node" index="0"]

script = ExtResource( 1 )

[node name="TempBackground" type="Sprite" parent="." index="0"]

position = Vector2( 1161.82, 582.324 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Material", "Pause", "Transform", "Visibility", "Z Index" ]

[node name="Goal" type="Area2D" parent="." index="1"]

editor/display_folded = true
modulate = Color( 0.96875, 0.864449, 0.0151367, 1 )
self_modulate = Color( 0.914062, 0.0535583, 0.0535583, 1 )
position = Vector2( 1379.7, 281.309 )
scale = Vector2( 1.74313, 1.24786 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 3 )
_sections_unfolded = [ "Collision", "Material", "Pause", "Transform", "Visibility" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Goal" index="0"]

position = Vector2( -0.0868835, -4.90939 )
scale = Vector2( 0.0354167, 0.0673354 )
z_index = 10
texture = ExtResource( 4 )
_sections_unfolded = [ "Material", "Offset", "Region", "Transform", "Visibility", "Z Index" ]

[node name="Sprite" type="Sprite" parent="Goal" index="1"]

position = Vector2( -0.0868725, 20.4342 )
scale = Vector2( 0.0354167, 0.0211 )
z_index = 10
texture = ExtResource( 4 )
_sections_unfolded = [ "Material", "Offset", "Region", "Transform", "Visibility", "Z Index" ]

[node name="GoalCollision" type="CollisionShape2D" parent="Goal" index="2"]

position = Vector2( -0.742767, -1.54787 )
scale = Vector2( 0.980492, 0.977126 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="MatchTime" type="Label" parent="." index="2"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -28.0
margin_top = 34.0
margin_right = 75.0
margin_bottom = 133.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "180"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Pause", "Rect", "Size Flags", "Theme", "Visibility", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="GoalPosition1" type="Position2D" parent="." index="3"]

position = Vector2( 1374.84, 278.257 )
_sections_unfolded = [ "Transform" ]

[node name="GoalPosition2" type="Position2D" parent="." index="4"]

position = Vector2( 510.021, 1046.89 )
_sections_unfolded = [ "Transform" ]

[node name="GoalPosition3" type="Position2D" parent="." index="5"]

position = Vector2( 1814.72, 1046.25 )
_sections_unfolded = [ "Transform" ]

[node name="GoalPosition4" type="Position2D" parent="." index="6"]

position = Vector2( 208.015, 533.289 )
scale = Vector2( 0.980492, 1 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="TileMap" type="TileMap" parent="." index="7"]

mode = 0
tile_set = ExtResource( 6 )
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 327700, 0, 0, 327701, 0, 0, 327702, 0, 0, 327703, 0, 0, 327704, 0, 0, 327705, 0, 0, 327706, 0, 0, 327707, 0, 0, 327708, 0, 0 )


